--- a/CarritoCompras/CarritoCompras/View/PageCarrito.xaml
+++ b/CarritoCompras/CarritoCompras/View/PageCarrito.xaml
@@ -57,9 +57,12 @@
                                                         <RowDefinition Height="auto"/>
                                                         <RowDefinition Height="auto"/>
                                                     </Grid.RowDefinitions>
-                                                    <StackLayout Grid.Row="0" VerticalOptions="Center" HorizontalOptions="Start">
-                                                        <Label Text="{Binding producto.nombre}" Margin="10" TextColor="Black" FontSize="12"/>
+                                                    
+                                                    <StackLayout Grid.Row="0" VerticalOptions="Center" >
+                                                        <Label Text="{Binding producto.nombre}" TextColor="Black" FontSize="18"
+                                                               FontAttributes="Bold"/>
                                                     </StackLayout>
+                                                    
                                                     <Grid Grid.Row="1">
                                                         <Grid.ColumnDefinitions>
                                                             <ColumnDefinition Width="auto"/>
