--- a/CarritoCompras/CarritoCompras/View/PagePago.xaml
+++ b/CarritoCompras/CarritoCompras/View/PagePago.xaml
@@ -5,6 +5,7 @@
              Title="Finalizar pago" BackgroundColor="#D6EAF8">
     <ContentPage.Content>
         <ScrollView>
+            
             <Grid HorizontalOptions="FillAndExpand" AbsoluteLayout.LayoutBounds="0,0,1,1" AbsoluteLayout.LayoutFlags="All">
                 <Grid.RowDefinitions>
                     <RowDefinition Height="*"/>
@@ -22,50 +23,62 @@
                             <RowDefinition Height="auto"/>
                             
                         </Grid.RowDefinitions>
-                        
-                        <StackLayout Grid.Row="0">
-                            <Label TextColor="#9C2424" Text="Métodos de Pago" FontSize="20" HorizontalOptions="Center" VerticalOptions="Center"/>
-                        </StackLayout>
 
-                        <StackLayout Grid.Row="1" Orientation="Vertical">
+                        <StackLayout x:Name="metPagos">
+                            <StackLayout Grid.Row="0">
+                                <Label TextColor="#7B241C" Text="Finalizar pago" FontSize="22" 
+                                   HorizontalOptions="Center" VerticalOptions="Center" FontAttributes="Bold"/>
+                            </StackLayout>
 
-                           
+                            <StackLayout Grid.Row="1" Orientation="Vertical" IsVisible="true" >
+                                <Label TextColor="#9C2424" Text="Seleccione el metodo de Pago" FontSize="18" 
+                                   VerticalOptions="Center"/>
+                                
+                                <Button Text="Efectivo" FontFamily="15" CornerRadius="20" BackgroundColor="#F9E79F"/>
 
+                                <Button Text="Transferencia bancaria" FontFamily="15" CornerRadius="20" BackgroundColor="#F9E79F"/>
 
+                                <Button x:Name="Btn_TC" Text="Tarjeta de credito" FontFamily="15" CornerRadius="20" 
+                                    BackgroundColor="#F9E79F" Clicked="Btn_TC_Clicked"/>
 
-                        </StackLayout>
-                        
+                                <Button Text="PSE" FontFamily="15" CornerRadius="20" BackgroundColor="#F9E79F"/>
 
-
-                        
-                        <StackLayout Grid.Row="2" Orientation="Vertical">
-                            <Label Text="Ingrese los datos de la tarjeta de credito" FontSize="20"/>
-                            <Label TextColor="Black" Text="Número de Tarjeta Credito:" FontSize="20"/>
-                            <Entry x:Name="txtNumeroTarjeta" Keyboard="Numeric"/>
-                        </StackLayout>
-                        
-                        <StackLayout Grid.Row="3" Orientation="Vertical" HorizontalOptions="Start">
-                            <Label TextColor="Black" Text="Fecha de Vencimiento:" FontSize="20"/>
-                            <StackLayout Orientation="Horizontal" HorizontalOptions="Start">
-                                <Entry x:Name="txtFechaMessExpiracion" Keyboard="Numeric" MaxLength="2" Placeholder="MM" Margin="0"/>
-                                <Entry Text="/" IsReadOnly="True"/>
-                                <Entry x:Name="txtFechaAñoExpiracion" Keyboard="Numeric" MaxLength="2" Placeholder="YY" Margin="0"/>
                             </StackLayout>
                         </StackLayout>
 
-                        <StackLayout  Grid.Row="4">
-                            <Label TextColor="Black" Text="Código CVV:" FontSize="20"/>
-                            <Entry x:Name="txtCodigoCVV" MaxLength="3" Keyboard="Numeric"/>
-                        </StackLayout>
 
-                        <StackLayout  Grid.Row="5">
-                            <Label TextColor="Black" Text="Enviar detalle compra al email:" FontSize="20"/>
-                            <Entry x:Name="txtEmail"/>
-                        </StackLayout>
 
-                        <Button Grid.Row="6" x:Name="btnConfirmarPago" Text="Confirmar Pago" TextColor="White" 
+                        <StackLayout x:Name="pagoTarjeta" IsVisible="false">
+                            <StackLayout Grid.Row="2" Orientation="Vertical">
+                                <Label Text="Ingrese los datos de la tarjeta de credito" FontSize="20"/>
+                                <Label TextColor="Black" Text="Número de Tarjeta Credito:" FontSize="20"/>
+                                <Entry x:Name="txtNumeroTarjeta" Keyboard="Numeric"/>
+                            </StackLayout>
+
+                            <StackLayout Grid.Row="3" Orientation="Vertical" HorizontalOptions="Start">
+                                <Label TextColor="Black" Text="Fecha de Vencimiento:" FontSize="20"/>
+                                <StackLayout Orientation="Horizontal" HorizontalOptions="Start">
+                                    <Entry x:Name="txtFechaMessExpiracion" Keyboard="Numeric" MaxLength="2" Placeholder="MM" Margin="0"/>
+                                    <Entry Text="/" IsReadOnly="True"/>
+                                    <Entry x:Name="txtFechaAñoExpiracion" Keyboard="Numeric" MaxLength="2" Placeholder="YY" Margin="0"/>
+                                </StackLayout>
+                            </StackLayout>
+
+                            <StackLayout  Grid.Row="4">
+                                <Label TextColor="Black" Text="Código CVV:" FontSize="20"/>
+                                <Entry x:Name="txtCodigoCVV" MaxLength="3" Keyboard="Numeric"/>
+                            </StackLayout>
+
+                            <StackLayout  Grid.Row="5">
+                                <Label TextColor="Black" Text="Enviar detalle compra al email:" FontSize="20"/>
+                                <Entry x:Name="txtEmail"/>
+                            </StackLayout>
+
+                            <Button Grid.Row="6" x:Name="btnConfirmarPago" Text="Confirmar Pago" TextColor="White" 
                                 HeightRequest="40" BackgroundColor="#2FB96E" HorizontalOptions="FillAndExpand" 
                                 Clicked="BtnConfirmarPago_Clicked" CornerRadius="32"/>
+                        </StackLayout>
+                        
 
                     </Grid>
                 </Frame>
